<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ObjetPret</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_choisir_objet">Choisir un objet</string>
    <string name="title_activity_ajouter_objet">Ajouter un objet</string>
    <string name="title_activity_retirer_objet">Retirer un objet</string>
    <string name="title_activity_rechercher_objet">Rechercherun objet</string>
    <string name="title_activity_demande_pret">Demande de pret</string>
    <string name="title_activity_modifier_profil">Modifier mon profil</string>
    <string name="title_activity_evaluation">Evaluation</string>
    <string name="title_activity_disponibilite_objet">Disponibilite d\'un objet</string>
    <string name="title_activity_confirmer_emprunt">Confirmer l\'emprunt</string>
    <string name="title_activity_confirmer_retour">Confirmer le retour</string>
    
    <string name="button_inscription">Inscription</string>
    <string name="button_choisir_objet">Choisir</string>
    <string name="button_ajouter_objet">Ajouter</string>
    <string name="button_retirer_objet">Retirer</string>
    <string name="button_rechercher_objet">Rechercher</string>
    <string name="button_demande_pret">Demander</string>
    <string name="button_modifier_profil">Profil</string>
    <string name="button_evaluation">Evaluer</string>
    <string name="button_disponibilite_objet">Disponibilite</string>
    <string name="button_confirmer_emprunt">Confirmer</string>
    <string name="button_confirmer_retour">Retourner</string>
    
    <string name="label_nom">Nom</string>
    <string name="label_description">Description</string>
    <string name="label_debut_emprunt">Debut emprunt</string>
    <string name="label_fin_emprunt">Fin emprunt</string>
    <string name="button_valider_disponibilite">Valider disponibilite</string>
    <string name="button_reserver">Reserver</string>
    <string name="button_annuler">Annuler</string>
    <string name="label_date_par_defaut">AAAA/MM/JJ</string>
    <string name="message_date_de_debut_invalide">La date de debut ne dois pas depasser la date de fin.</string>
    <string name="message_date_manquante">Vous devez choisir la date de debut et la date de fin.</string>
    <string name="message_date_debut_passe">La date de debut doit etre dans le futur.</string>
    <string name="message_objet_disponible">L\'objet est disponible pour les dates choisies.</string>
    <string name="message_objet_non_disponible">L\'objet n\'est pas disponible pour les dates choisies.</string>

    

</resources>
